# mpenciak.github.io

./: .gitignore  404.html  CNAME  Gemfile  _config.yml  aboutme.md  beautiful-jekyll-theme.gemspec  index.html  pelicanconf.py  projects.md  pyproject.toml  todo.md
_layouts/: aboutme.html  base.html  page.html  post.html
_posts/: 2022-03-16-hello_world.md  2022-03-17-learning_lean.md  2022-03-24-spectral_rs.md  2022-05-??-metaprogramming.md  2022-08-12-deriving_handlers.md
assets/css/: aboutme.css
content/: test.md
output/: archives.html  authors.html  categories.html  index.html  tags.html  test-post.html
output/author/: matej-penciak.html
output/category/: test.html
