[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["Matej Penciak <matej.penciak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pelican = {extras = ["markdown"], version = "^4.9.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
